# RayBNN_DataLoader

./: Cargo.toml  README.md
src/: lib.rs
src/Dataset/: CSV.rs  Random.rs  Round.rs  mod.rs
src/Model/: Misc.rs  Network.rs  YAML.rs  mod.rs
test_data/: neuron_idx2.csv  neuron_idx3.csv  neuron_pos.csv  neuron_pos2.csv  neuron_pos3.csv  test.yaml
tests/: test_dataset.rs  test_dataset_csv.rs  test_dataset_csv2.rs  test_dataset_csv3.rs  test_parse_YAML.rs  test_read_dir.rs  test_round.rs
