[package]
name = "RayBNN_DataLoader"
version = "2.0.3"
authors = ["Brosnan Yuen <brosnanyuen@gmail.com>"]
edition = "2021"
description = "Read CSV, numpy, and binary files to Rust vectors of f16, f32, f64, u8, u16, u32, u64, i8, i16, i32, i64"
readme = "README.md"
repository = "https://github.com/BrosnanYuen/RayBNN_DataLoader"
keywords = ["csv","numpy","data","CUDA","OpenCL"]
license = "GPL-3.0-only"
categories = ["science"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayfire = { version = "3.8.1", package = "arrayfire_fork" }
rayon = "1.10.0"
num = "0.4.3"
num-traits = "0.2.19"
half = { version = "2.4.1" , features = ["num-traits"] }
npyz = "0.8.3"
rand = "0.8.5"
nohash-hasher = "0.2.0"


[dev-dependencies]
arrayfire = { version = "3.8.1", package = "arrayfire_fork" }
rayon = "1.10.0"
num = "0.4.3"
num-traits = "0.2.19"
half = { version = "2.4.1" , features = ["num-traits"] }
npyz = "0.8.3"
rand = "0.8.5"
nohash-hasher = "0.2.0"

[build-dependencies]
arrayfire = { version = "3.8.1", package = "arrayfire_fork" }
rayon = "1.10.0"
num = "0.4.3"
num-traits = "0.2.19"
half = { version = "2.4.1" , features = ["num-traits"] }
npyz = "0.8.3"
rand = "0.8.5"
nohash-hasher = "0.2.0"


[lib]
name = "RayBNN_DataLoader"
path = "src/lib.rs"




